@@ -1,3 +1,5 @@
 def call(){
-    sh 'mvn test'
+    withEnv(['MAVEN_OPTS=--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']){
+        sh 'mvn test'
+    }
 }
